change name to index

--- a/try/showknow.html
+++ b/try/showknow.html
@@ -30,7 +30,7 @@
 		</p>
 	</div>
 	<div class="total">
-		<a href="Untitled.html" style="text-decoration: none;"><h2 align="center">返回主界面</h2></a>
+		<a href="index.html" style="text-decoration: none;"><h2 align="center">返回主界面</h2></a>
 	</div>
 	</div>
 </body>
