修改链接，回到主界面

--- a/try/propect.html
+++ b/try/propect.html
@@ -25,7 +25,7 @@
        	<source src="video/16840578_1_0.mp4" type="video/mp4">
     </video>
 	<div>
-		<a href="Untitled.html" style="text-decoration: none;"><h2 align="center">返回主界面</h2></a>
+		<a href="index.html" style="text-decoration: none;"><h2 align="center">返回主界面</h2></a>
 	</div>
 	</div>
 	</div>
