--- a/try/index.html
+++ b/try/index.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 
 	body{
-		background-image: url("image/325235.jpg");
+		background-image: url("image/timg.jpg");
 		background-size: 100% 100%;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -70,33 +70,33 @@
 	<div class="divsize">
 		<a href="showknow.html" target="_blank">
 		<div class="divsizediv">
-			<img class="size" src="image/-1cb5e9573e1d8dd8.jpg" alt="tu1">
+			<img class="size" src="image/qqq.jpg" alt="tu1">
 			<div class="mask">
-				<h1>课程相关内容</h1>           
+				<h1>是什么</h1>           
             </div>
 		</div>	
 		</a>
 		<a href="salf-study.html" target="_blank">
         <div class="divsizediv">
-	        <img class="size" src="image/322059.jpg" alt="tu2">
+	        <img class="size" src="image/qqq.jpg" alt="tu2">
 			<div class="mask">
-               <h1>课外自学相关内容</h1>
+               <h1>小故事</h1>
             </div>
 	    </div>
 		</a>
 		<a href="propect.html" target="_blank">
 		<div class="divsizediv">
-			<img class="size" src="image/1526734939654.jpg" alt="tu3">
+			<img class="size" src="image/qqq.jpg" alt="tu3">
 			<div class="mask">
-               <h1>娱乐相关内容</h1>
+               <h1>预防</h1>
             </div>
 		</div>
 		</a>
 		<a href="else.html" target="_blank">
 		<div class="divsizediv">
-			<img class="size" src="image/1526734935519.jpg" alt="tu4">
+			<img class="size" src="image/qqq.jpg" alt="tu4">
 			<div class="mask">
-               <h1>其他相关内容</h1>
+               <h1>小测试</h1>
             </div>
 		</div>
 		</a>
