--- a/try/else.html
+++ b/try/else.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>其他备用</title>
 <style type="text/css">
-/*选择题*/	
-	
+/*选择题 待定*/	
+/*水平不足，暂时无法完成*/
 	
 </style>
 </head>
