修改字体颜色

--- a/try/index.html
+++ b/try/index.html
@@ -65,7 +65,7 @@
 
 <body>
 	<div>
-	<h1 align="center" style="color: white;">请选择</h1>
+	<h1 align="center" style="color: black;">请选择</h1>
 	<hr>
 	<div class="divsize">
 		<a href="showknow.html" target="_blank">
